--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ serde_json = "1.0"
 sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
 dotenv = "0.15"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+actix-cors = "0.6"
+
